solved swagger issue - beginning to add players
